# socket.io-server-rust

./: .gitignore  Cargo.toml  README.md  socket.io-server-rust.code-workspace
engine_io/: Cargo.toml
engine_io/src/: adapter.rs  lib.rs  server.rs  socket.rs  transport.rs
engine_io_parser/: Cargo.toml  README.md
engine_io_parser/benches/: encode_decode.rs
engine_io_parser/src/: binary.rs  decoder.rs  lib.rs  packet.rs  string.rs
engine_io_parser/tests/: binary_test.rs  string_test.rs
engine_io_server/: Cargo.toml  README.md
engine_io_server/src/: adapter.rs  lib.rs  server.rs  socket.rs  transport.rs  util.rs
engine_io_standalone/: Cargo.toml
engine_io_standalone/src/: lib.rs  polling.rs  standalone.rs  websocket.rs
engine_io_warp/: Cargo.toml
engine_io_warp/src/: adapter_warp.rs  lib.rs  polling.rs  websocket.rs
examples/engine_io_standalone_server/: Cargo.toml  echo.html
examples/engine_io_standalone_server/src/: main.rs
socket_io_parser/: Cargo.toml
socket_io_parser/src/: decoder.rs  encoder.rs  lib.rs  macros.rs  packet.rs  parser.rs  ser.rs
socket_io_server/: Cargo.toml  README.md
socket_io_server/src/: connection.rs  error.rs  lib.rs  namespace.rs  server.rs  socket.rs  storage.rs
