[package]
name = "engine_io"
version = "0.1.0"
authors = ["Oguz Bilgener <oguzbilgener@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# engine_io_parser = "^0.1.0"
engine_io_parser = { path = "../engine_io_parser" }
futures = { version = "^0.3" }
# FIXME: figure out the necessary features to enable only
tokio = { version = "^0.2", features = ["full"] }
async-trait = "^0.1.36"
enum_dispatch = "0.3.1"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "^1.0.55"
# FIXME: determine if it's worth to keep strum
strum = "0.18.0"
strum_macros = "0.18.0"