[package]
name = "engine_io_server"
description = "A web framework-agnostic Engine.io protocol implementation for Socket.IO"
version = "0.1.0"
authors = ["Oguz Bilgener <oguzbilgener@gmail.com>"]
edition = "2018"
keywords = ["socketio", "engineio", "websocket"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# engine_io_parser = "^0.2.0"
engine_io_parser = { path = "../engine_io_parser" }
futures = { version = "^0.3" }
tokio = { version = "^0.2", features = ["rt-core", "sync"] }
async-trait = "^0.1.40"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "^1.0.55"
serde = { version = "^1.0.116", features = ["derive"] }
# FIXME: determine if it's worth to keep strum
strum = "^0.18.0"
strum_macros = "^0.18.0"
bytes = "^0.5.6"