[package]
name = "engine_io_standalone"
description = "stuff"
version = "0.1.0"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
repository = "https://github.com/oguzbilgener/socket.io-server-rust"
keywords = ["socketio", "engineio", "websocket"]
license = "MIT"
edition = "2018"

include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "benches/**/*.rs"
]

[dependencies]
engine_io = { path = "../engine_io" }
