[package]
name = "engine_io_warp"
description = "The Warp framework adapter for engine_io_server"
version = "0.1.0"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
repository = "https://github.com/oguzbilgener/socket.io-server-rust"
keywords = ["socketio", "engineio", "websocket", "warp", "hyper"]
license = "MIT"
edition = "2018"

include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "benches/**/*.rs"
]

[dependencies]
# engine_io_server = { version = "^0.1.0" }
# engine_io_parser = { version = "^0.2.0" }
engine_io_server = { path = "../engine_io_server" }
engine_io_parser = { path = "../engine_io_parser" }
futures = { version = "^0.3" }
async-trait = "^0.1.40"
bytes = "^0.5.6"
# FIXME: figure out the necessary features to enable only
tokio = { version = "^0.2", features = ["full"] }
warp = { version = "^0.2", features = ["websocket"] }
serde = { version = "^1.0.116", features = ["derive"] }
