[package]
name = "socket_io_parser"
description = "A socket.io encoder and decoder complying with version 4 of socket.io-protocol"
version = "0.1.0"
authors = ["Oguz Bilgener <oguzbilgener@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "benches/**/*.rs"
]

[dependencies]
engine_io_parser = { path = "../engine_io_parser" }
base64 = "^0.12.2"
bytes = "^0.5.6"
nom = "^5.1.2"
serde_json = "^1.0.55"
serde = { version = "^1.0.116", features = ["derive"] }