[package]
name = "socket_io_server"
description = "A web framework-agnostic implementation of Socket.IO in Rust"
version = "0.1.0"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
repository = "https://github.com/oguzbilgener/socket.io-server-rust"
keywords = ["socketio", "engineio", "websocket"]
license = "MIT"
edition = "2018"

include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "benches/**/*.rs"
]

[dependencies]

engine_io_server = { path = "../engine_io_server" }
socket_io_parser = { path = "../socket_io_parser" }
# engine_io_server = { version = "^0.1.0" }
futures = { version = "^0.3" }
uuid = { version = "^0.8", features = ["v4"] }
async-trait = "^0.1.40"
# FIXME: figure out the necessary features to enable only
tokio = { version = "^0.2", features = ["full"] }
warp = { version = "^0.2", features = ["websocket"] }
regex = "^1.4.2"
serde_json = "^1.0.55"
chrono = "^0.4"
dashmap = "^3.11.10"