[package]
name = "engine_io_standalone_server"
version = "0.1.0"
authors = ["Oguz Bilgener <oguzbilgener@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^0.5.6"
tokio = { version = "^0.2", features = ["full"] }
engine_io = { path = "../../engine_io" }
engine_io_standalone = { path = "../../engine_io_standalone" }
